build/staging/api-mqtt/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-mqtt-service
  namespace: staging
spec:
  selector:
    app: api-mqtt
  type: ClusterIP
  ports:
  - name: node
    port: 80
    targetPort: 8081
