build/staging/api-mqtt/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-mqtt-ingress
  namespace: staging
  labels:
    app: "api-mqtt"
spec:
  rules:
    - host: staging-checkin-http.rfcx.org # TODO Remove external access if possible
      http:
        paths:
          - backend:
              serviceName: api-mqtt-service
              servicePort: 80
